# FGC26RobotLab

./: .gitignore  README.md  pyproject.toml
data/: run_summary.csv
data/raw/: README.md
notebooks/: 00_TONG_QUAN.ipynb  DT00.ipynb  DT01.ipynb  DT02.ipynb  DT03.ipynb  DT04.ipynb  README.md  TEMPLATE.ipynb
scenarios/: DRIVETRAIN.md  drivetrain_config_matrix.csv
schema/: SCHEMA.md  fgc-summary-v1.csv  fgc-ts-v1.csv
src/analysis/: __init__.py  io.py  metrics.py  notebook.py  plots.py  schema.py  validation.py
src/fgc_analysis/: __init__.py  io.py  metrics.py  plots.py  validation.py
